--- a/cadastrarLivro.html
+++ b/cadastrarLivro.html
@@ -11,7 +11,7 @@
 	<nav class="menu1">
 		<a href="index.html"> Home </a> |
 		<a href="cadastrarLivro.html"> Cadastrar livro </a> |
-		<a href="#"> Consultar Livro </a>
+		<a href="consultarLivro.html"> Consultar Livro </a>
 	</nav>
 	<main>
 		
@@ -20,7 +20,7 @@
  	
     	    <p class="nome">
             <input type="text" id="tituloid" placeholder="Livro" required="required" name="titulo" />
-            <label for="titulo">Nome</label>
+            <label for="titulo"> Título </label>
         	</p>
         	
         	<p class="autor">
