Criado o consultarLivro.html e o listarLivros.html

--- a/cadastrarLivro.html
+++ b/cadastrarLivro.html
@@ -11,7 +11,9 @@
 	<nav class="menu1">
 		<a href="index.html"> Home </a> |
 		<a href="cadastrarLivro.html"> Cadastrar livro </a> |
-		<a href="consultarLivro.html"> Consultar Livro </a>
+		<a href="consultarLivro.html"> Consultar Livro </a> |
+		<a href="listarLivros.html"> Listar Livros </a> |
+		<a href="excluirLivro.html"> Excluir Livro </a>
 	</nav>
 	<main>
 		
