--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 	<nav class="menu1">
         <a href="index.html"> Home </a> |
         <a href="cadastrarLivro.html"> Cadastrar livro </a> |
-        <a href="consultarLivro.html"> Consultar Livro </a>
+        <a href="consultarLivro.html"> Consultar Livro </a> |
+        <a href="listarLivros.html"> Listar Livros </a> |
+        <a href="excluirLivro.html"> Excluir Livro </a>
 	</nav>
 
     <main>
         <p>
         
-        <h2> Página em construção ... </h2>
+        <h2> Página em construção - Início </h2>
         
         </p>
     </main>
