--- a/listarLivros.html
+++ b/listarLivros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title> Excluir Livro </title>
+    <title> Listar Livro </title>
     <meta charset="utf-8" />
     <link href="estilo.css" rel="stylesheet" media="all" />
     <script src="JavaScript1.js"></script>
@@ -20,7 +20,7 @@
     <main>
         <p>
         
-        <h2> Página em construção - Excluir Livro </h2>
+        <h2> Página em construção - Listar Livros </h2>
         
         </p>
     </main>
