--- a/cadastrarLivro.html
+++ b/cadastrarLivro.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="UTF-8">
-	<title>Cadastrar Livro</title>
+    <title> Cadastrar Livro </title>
+    <meta charset="utf-8" />
     <link href="estilo.css" rel="stylesheet" media="all" />
+    <script src="JavaScript.js"></script>
 </head>
 <body>
+	<header>
+	   <h1 class="titulo_do_sistema"> Sistema de Biblioteca </h1>
+	   <nav class="menu1">
+            <a href="index.html"> Home </a> |
+            <a href="cadastrarLivro.html"> Cadastrar livro </a> |
+            <a href="consultarLivro.html"> Consultar Livro </a> |
+            <a href="listarLivros.html"> Listar Livros </a> |
+            <a href="excluirLivro.html"> Excluir Livro </a>
+	   </nav>
+    </header>
 
-		<h1 class="titulo_do_sistema"> SysLib </h1>
-	<nav class="menu1">
-		<a href="index.html"> Home </a> |
-		<a href="cadastrarLivro.html"> Cadastrar livro </a> |
-		<a href="consultarLivro.html"> Consultar Livro </a> |
-		<a href="listarLivros.html"> Listar Livros </a> |
-		<a href="excluirLivro.html"> Excluir Livro </a>
-	</nav>
+
 	<main>
 		
-	    <form name="meu_form">
-	        <h1> Dados do Livro </h1>
+	    <form name="meu_form_cadastrar">
+	        <h1 class="titulo_do_sistema"> Sistema de Biblioteca </h1>
  	
     	    <p class="nome">
             <input type="text" id="tituloid" placeholder="Livro" required="required" name="titulo" />
