--- a/consultarLivro.html
+++ b/consultarLivro.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="UTF-8">
-	<title> Consultar Livro </title>
+    <title> Consultar Livro </title>
+    <meta charset="utf-8" />
+    <link href="estilo.css" rel="stylesheet" media="all" />
+    <script src="JavaScript.js"></script>
+
 </head>
 <body>
-		<h1 class="titulo_do_sistema"> SysLib </h1>
-	<nav class="menu1">
-		<a href="index.html"> Home </a> |
-		<a href="cadastrarLivro.html"> Cadastrar livro </a> |
-		<a href="consultarLivro.html"> Consultar Livro </a> |
-		<a href="listarLivros.html"> Listar Livros </a> |
-		<a href="excluirLivro.html"> Excluir Livro </a>
-	</nav>
+	<header>
+	   <h1 class="titulo_do_sistema"> Sistema de Biblioteca </h1>
+	   <nav class="menu1">
+            <a href="index.html"> Home </a> |
+            <a href="cadastrarLivro.html"> Cadastrar livro </a> |
+            <a href="consultarLivro.html"> Consultar Livro </a> |
+            <a href="listarLivros.html"> Listar Livros </a> |
+            <a href="excluirLivro.html"> Excluir Livro </a>
+	   </nav>
+    </header>
 	
 	<main>
         <p>
         
         <h2> Página em construção - Consultar Livro </h2>
+        <img src="constr.gif">
         
         </p>
     </main>
